--- a/estilos.css
+++ b/estilos.css
@@ -58,8 +58,7 @@ a {
 
 header {
     background: url(MayCoquetaMod.jpg);
-    height: auto;
-    max-width: 100%;
+    height: 100vh;
     background-size: cover;
 }
 
