--- a/estilos.css
+++ b/estilos.css
@@ -33,8 +33,7 @@ ul {
 
 
 .titular {
-    text-align: center;
-    vertical-align: bottom;
+    text-align: bottom;
     margin-top: 500px;
 }
 
@@ -46,6 +45,7 @@ h1 {
 h2 {
     font-size: 25px;
     margin-bottom: 40px;
+    color: gray;
 }
 
 
