--- a/estilos.css
+++ b/estilos.css
@@ -64,7 +64,7 @@ header {
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
-    bacground-attachment: fixed;
+    background-attachment: fixed;
     
 }
 
