--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,6 @@ body {
     margin-top: 300px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
-
-p {
+h1 {
     direction: rtl;
 }
