--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,5 @@ body {
     text-align: center;
     margin-top: 300px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-}
-h1 {
-    direction: rtl;
+    text-direction: rtl;
 }
