responsive @media added

--- a/styles.css
+++ b/styles.css
@@ -103,3 +103,10 @@ body {
 .letter-n-B {
 	color: lightblue;
 }
+
+@media screen and (max-width:600px) {
+	body {
+		font-size: 4em;
+		margin: 0;
+	}
+}
