--- a/styles.css
+++ b/styles.css
@@ -108,7 +108,7 @@ body {
 @media screen and (max-width:600px) {
     body{
         font-size: 4em;
-        margin:0;
+        margin:150px 0 0 0;
     }
 
 }
