--- a/styles.css
+++ b/styles.css
@@ -1,106 +1,105 @@
-@import url('https://fonts.googleapis.com/css2?family=Ultra&display=swap');
-
-
 body {
-    background-color: #000;
-    font-weight: bold;
-    font-size: 8em;
-    font-family: Ultra;
-    margin: 150px;
+    margin: 0;
+    padding: 0;
+    font-family: 'Open Sans', sans-serif;
+    background: gray;
+    color: #fff;
+    background: url(/images/tree-7317683_1920.jpg) repeat center center fixed;
+    background-size: cover;
 }
 
 
-.alfon {
+video {
+       z-index: 0;
+       position: absolute;
+       left: 0;
+       top: 0;
+       width: 100%;
+       height: 100%;
+       object-fit: cover;
+}
+
+main {
+    position: relative;
+    margin-top: 95px;
+    opacity: 0;
+    filter: blur(10px);
+    transition: opacity 2s ease-in-out, filter 2s ease-in-out;
+}
+
+
+
+#vanta {
+    z-index: 0;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
+
+header{
+    margin-top: 1em;
+    text-align: center;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-around;
-    max-height: 200px;
 }
 
 
-@keyframes fontGrow {
-    0% { transform: scaleY(1)}
-    50% { transform: scaleY(2)}
-    100% { transform: scaleY(1)}
+header > img {
+    width: 6em;
+    height: 6em;
+    border-radius: 100%;
+    border: 1px solid #fff;
+    box-shadow: 0 2px 8px 0 rgb(28, 32, 93 / 24%);
 }
 
 
-.alfon-letters {
-    animation-name: fontGrow;
-    animation-duration: 2s;
-    animation-iteration-count: infinite;
-    transform-origin: top;
-    transition-timing-function: ease-in-out;
+header > h1 {
+    display: inline-block;
+    font-size: 0.8em;
+    font-weight: bold;
+    border-radius: 1em;
+    background-color: #000a;
+    color: #fff;
+    padding: 0.3em 0.6em;
+    border: 1px solid #fffa;
+    backdrop-filter: blur(10px) saturate(160%) contrast(180%);
+    -webkit-backdrop-filter: blur(10px) saturate(160%) contrast(180%);
 }
 
-.letter-a {
-    color: lightblue;
+ul {
+    box-sizing: border-box;
+    list-style: none;
+    margin: 0 auto;
+    padding: 2em;
+    max-width: 480px;
 }
 
-.letter-l {
-    color: lightcoral; 
-    animation-delay: 1s;
+ul > li {
+    /* Con el a le añadimos el alfa */
+    background-color: #fffa;
+    /* Filtro para aplicar blur */
+    backdrop-filter: blur(10px) saturate(160%) contrast(180%);
+    /* Para que funcione en OSX */
+    -webkit-backdrop-filter: blur(10px) saturate(160%) contrast(180%);
+    border-radius: 10em;
+    padding: 1em;
+    margin: 2em 0;
+    box-shadow: rgb(28, 32, 93 / 24%) 0px 5px 30px 10px;
 }
 
-.letter-f {
-    color: lightseagreen;
-}
-
-.letter-o {
-    color: plum;
-    animation-delay: 1s;
-}
-
-.letter-n {
-    color: aquamarine;
-}
-
-
-
-
-
-
-.alfon-B {
+ul > li > a {
     display: flex;
-    justify-content: space-around;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5em;
 }
 
-
-@keyframes fontGrowReverse {
-    0% { transform: scaleY(2)}
-    50% { transform: scaleY(1)}
-    100% { transform: scaleY(2)}
-    
+a {
+    text-decoration: none;
+    color: black;
 }
 
-
-.alfon-letters-B {
-    animation-name: fontGrowReverse;
-    animation-duration: 2s;
-    animation-iteration-count: infinite;
-    transform-origin: bottom;
-    transition-timing-function: ease-in-out;
-}
-
-
-.letter-a-B {
-    color: aquamarine;
-}
-
-.letter-l-B {
-    color: plum;
-    animation-delay: 1s;
-}
-
-.letter-f-B {
-    color: lightcoral;
-}
-
-.letter-o-B {
-    color: lightseagreen;
-    animation-delay: 1s; 
-}
-
-.letter-n-B {
-    color: lightblue;
-}
