--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,14 @@
-body {
+body, html {
     margin: 0;
     padding: 0;
     font-family: 'Open Sans', sans-serif;
-    background: gray;
     color: #fff;
+  }
+
+
+body {
+    background: url(/images/tree-7317683_1920.jpg) no-repeat center center fixed;
+    background-size: cover;
 }
 
 
