--- a/styles.css
+++ b/styles.css
@@ -13,24 +13,25 @@ body {
 
 
 video {
-       z-index: 0;
-       position: absolute;
-       left: 0;
-       top: 0;
-       width: 100%;
-       height: 100%;
-       object-fit: cover;
+    z-index: 0;
+    position: relative;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 main {
     position: relative;
     margin-top: 95px;
+}
+
+main.animated {
     opacity: 0;
     filter: blur(10px);
     transition: opacity 2s ease-in-out, filter 2s ease-in-out;
 }
-
-
 
 #vanta {
     z-index: 0;
