--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,16 @@
-body, html {
+body {
     margin: 0;
     padding: 0;
     font-family: 'Open Sans', sans-serif;
+    background: gray;
     color: #fff;
-  }
-
-
-body {
-    background: url(/images/tree-7317683_1920.jpg) no-repeat center center fixed;
     background-size: cover;
 }
 
 
 video {
     z-index: 0;
-    position: relative;
+    position: fixed;
     left: 0;
     top: 0;
     width: 100%;
@@ -25,22 +21,11 @@ video {
 main {
     position: relative;
     margin-top: 95px;
-}
-
-main.animated {
     opacity: 0;
     filter: blur(10px);
     transition: opacity 2s ease-in-out, filter 2s ease-in-out;
 }
 
-#vanta {
-    z-index: 0;
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-}
 
 header{
     margin-top: 1em;
