--- a/styles.css
+++ b/styles.css
@@ -4,18 +4,19 @@ body {
     font-family: 'Open Sans', sans-serif;
     background: gray;
     color: #fff;
+    background: url(/images/tree-7317683_1920.jpg) repeat center center fixed;
     background-size: cover;
 }
 
 
 video {
-    z-index: 0;
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+       z-index: 0;
+       position: fixed;
+       left: 0;
+       top: 0;
+       width: 100%;
+       height: 100%;
+       object-fit: cover;
 }
 
 main {
@@ -26,6 +27,16 @@ main {
     transition: opacity 2s ease-in-out, filter 2s ease-in-out;
 }
 
+
+
+#vanta {
+    z-index: 0;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
 
 header{
     margin-top: 1em;
