--- a/styles.css
+++ b/styles.css
@@ -27,8 +27,6 @@ main {
     transition: opacity 2s ease-in-out, filter 2s ease-in-out;
 }
 
-
-
 #vanta {
     z-index: 0;
     position: absolute;
@@ -96,6 +94,7 @@ ul > li > a {
     justify-content: center;
     align-items: center;
     gap: 0.5em;
+    padding: 0.5em;
 }
 
 a {
